# genoray

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pixi.toml  pyproject.toml  svartools.py
.github/: PULL_REQUEST_TEMPLATE.md  bump.yaml  merge.yaml  publish.yaml
.github/workflows/: bump.yaml  prek.yaml  release.yaml  test.yaml
ci/wheel/: pixi.toml
data/: README.md
docs/: requirements.txt
docs/roadmap/: architecture.md  clean-code-audit.md  data-model.md  svar-2.md  svar2-conversion-baseline-2026-07-15.md  svar2-conversion-decision-2026-07-15.md  svar2-conversion-profiling.md
docs/roadmap/audit-findings/: 01-svar.md  02-vcf-pgen.md  03-mutcat-utils.md  04-api-skill.md  05-rust-query.md  06-rust-rest.md
docs/source/: api.md  conf.py  index.md  svar.md
docs/superpowers/notes/: 2026-07-12-svar2-reroute-measurement.md  2026-07-13-svar2-eager-materialization-benchmark.md
docs/superpowers/plans/: 2026-05-19-svar-write-view.md  2026-05-20-merge-cli-into-genoray.md  2026-05-20-svar-view-cli.md  2026-05-30-vcfixture-fixtures.md  2026-05-30-with-length-test-audit.md  2026-06-04-svar-filter-inheritance.md  2026-06-04-symbolic-allele-ilen.md  2026-06-05-svar-cli-filter-flags.md  2026-06-10-svar-convert-subset.md  2026-06-11-cosmic-signature-refitting.md  2026-06-11-svar-mutation-catalogues.md  2026-06-12-annotate-mutations-pos-offby-one.md  2026-06-13-annotate-mutations-contig-scope.md  2026-06-13-mito-contig-aliasing.md  2026-06-13-vectorize-mutation-matrices.md  2026-06-24-filtered-pgen-var-idxs.md  2026-06-24-svar-haploid-write.md  2026-06-26-parallelize-fit-signatures.md  2026-06-27-svar-streaming-write-view.md  2026-06-27-write-view-fail-fast.md  2026-06-28-write-view-progress.md  2026-06-30-atomic-sibling-writes.md  2026-07-01-pr79-architectural-fixup.md  2026-07-01-svar2-m4-dense-cost-model.md  2026-07-02-svar2-codec-crate.md  2026-07-02-svar2-m2-normalization.md  2026-07-02-svar2-m3-format-finalization.md  2026-07-02-svar2-m5-max-del-postpass.md  2026-07-02-svar2-m5-range-sample-query.md  2026-07-02-svar2-m5-search-core.md  2026-07-02-svar2-m6-prep.md  2026-07-02-svar2-m6.1-consumer-spine.md  2026-07-02-svar2-m6a-pyo3-foundation.md  2026-07-02-svar2-m6b-genoray.md  2026-07-02-svar2-m6b-gvl.md  2026-07-02-svar2-m6c.md  2026-07-03-svar2-cli-write-and-m13-skip.md  2026-07-07-svar2-parallel-reader.md  2026-07-08-maturin-release-ci.md  2026-07-08-sp0-quick-wins.md  (+35 more)
docs/superpowers/specs/: 2026-05-19-svar-write-view-design.md  2026-05-20-merge-cli-into-genoray-design.md  2026-05-20-svar-view-cli-design.md  2026-05-30-vcfixture-fixtures-design.md  2026-05-30-with-length-test-audit-design.md  2026-06-04-svar-filter-inheritance-design.md  2026-06-04-symbolic-allele-ilen-design.md  2026-06-05-svar-cli-filter-flags-design.md  (+62 more)
genoray/: __init__.py  _mutcat.py  _pb_utils.py  _pgen.py  _reference.py  _signatures.py  _svar.py  _types.py  _utils.py  _var_ranges.py  _vcf.py  exprs.py
genoray/_cli/: __main__.py
proptest-regressions/: rvk.txt
python/genoray/: __init__.py  _contigs.py  _genos.py  _io.py  _logging.py  _modes.py  _mutcat.py  _pgen.py  _progress.py  _reference.py  _signatures.py  _svar.py  _svar2.py  _svar2_batch.py  _svar2_decode.py  _svar2_fields.py  _svar2_mutcat.py  _svar2_ops.py  _types.py  _utils.py  _var_ranges.py  _vcf.py  exprs.py
scripts/: docstring_style.py  make_matched_pgen.py  svar2_eager_bench.py  svar2_region_parallel_bench.py  svar2_reroute_spike.py
scripts/bench_from_vcf_list/: README.md  generate_cohort.py  run_bench.py  test_generate_cohort.py  test_run_bench.py
scripts/from_vcf_livelock/: README.md  generate_repro.py  repro.py
scripts/profile/: callgrind.sh  cargo_asm.sh  perf_record.sh  perf_sched.sh  perf_stat.sh
skills/genoray-api/: SKILL.md
src/: bits.rs  budget.rs  chunk_assembler.rs  cost_model.rs  dense.rs  dense_merge.rs  enum_map.rs  error.rs  executor.rs  field.rs  field_finalize.rs  layout.rs  lib.rs  logging.rs  max_del.rs  merge.rs  meta.rs  monitor.rs  normalize.rs  nrvk.rs  orchestrator.rs  pgen_reader.rs  pgen_shard.rs  pvar.rs  py_convert.rs  py_mutcat.rs  py_query.rs  py_query_batch.rs  py_query_decode.rs  py_query_ranges.rs  py_svar1_query.rs  query.rs  record_source.rs  rvk.rs  search.rs  shard.rs  shard_exec.rs  spine.rs  streams.rs  svar1_query.rs  (+12 more)
src/mutcat/: annotate.rs  classify.rs  count.rs  mod.rs  sidecar.rs
src/query/: decode.rs  field.rs  gather.rs  mod.rs  oracle.rs  reader.rs  sidecar.rs  union.rs
svar2-codec/: Cargo.toml  README.md
svar2-codec/src/: lib.rs
tests/: _length_helpers.py  _mutcat_oracle.py  _oracle.py  bench_mutcat.rs  conftest.py  test_atomic_write.py  test_atomize_e2e.rs  test_batch.rs  test_batch_raw.rs  test_bench_generate_cohort.py  test_check_ref_e2e.rs  test_contig_resolver_parity.py  test_convert_skip_e2e.rs  test_decode_mat.rs  test_dense2sparse_with_length.py  test_e2e.rs  test_engine.rs  test_field_provenance.rs  test_field_read.rs  test_fixtures_render.py  test_from_vcf_livelock.py  test_from_vcf_livelock_fixture.py  test_gtf_annotation.py  test_index_vcf.rs  test_issue36.py  test_join_order.py  test_lazy_init.py  test_left_align_e2e.rs  test_logging.py  test_modes.py  test_monitor.rs  test_mutcat.py  test_mutcat_calibration.py  test_mutcat_codebook_sbs384.py  test_mutcat_count.rs  test_mutcat_sentinel.py  test_mutcat_strand.py  test_oracle.py  test_parity.py  test_pgen.py  (+50 more)
tests/cli/: conftest.py  test_view_cli.py  test_view_helpers.py  test_view_svar2_cli.py  test_write_cli.py
tests/common/: mod.rs
tests/data/: .gitignore  README.md  biallelic.pgen  biallelic.pvar.gvi  biallelic.vcf  biallelic.vcf.gz.csi  biallelic.vcf.gz.gvi  cosmic_mini.txt  fixtures.py  gen_from_vcf.sh  gen_svar.py  gen_vcfs.py  indels.vcf  multiallelic.pgen  multiallelic.vcf.gz.csi  test.gvi  test.pgen  test.pvar.gvi  test.vcf  test.vcf.gz.csi  three_samples_unsorted.vcf
tests/scripts/: test_make_matched_pgen.py  test_region_parallel_bench.py
variant_io/: __init__.py  _types.py  _utils.py  _vcf.py
(+19 files in other folders)
