[package]
name = "genoray"
version = "0.1.0"
edition = "2024"

[lib]
name = "genoray_core"
crate-type = ["cdylib"]

[dependencies]
memmap2 = "0.9.10"
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
num-traits = "0.2.19"
pyo3 = { version = "0.29", features = ["extension-module"] }
crossbeam-channel = "0.5.15"
bytemuck = "1.25"
# default-features = false drops bzip2/lzma/curl (and their system libs); htslib is
# vendored by hts-sys and built with the conda C/C++ compilers. hts-sys forces
# bindgen, so the build needs libclang (provided via pixi: clang/clangdev).
rust-htslib = { version = "1.0", default-features = false }
