[package]
name = "genoray"
version = "0.1.0"
edition = "2024"

[lib]
name = "genoray_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.25.0"
crossbeam-channel = "0.5.15"
memmap2 = "0.9.10"
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
numpy = "0.29.0"
# extension-module is gated behind the (default) `extension-module` feature below so
# that `cargo test --no-default-features` can link libpython and run the Rust test
# suites. maturin builds with default features, so the wheel still gets it.
pyo3 = { version = "0.29", features = ["multiple-pymethods"] }
rayon = "1.11.0"
# default-features = false drops bzip2/lzma/curl (and their system libs); htslib is
# vendored by hts-sys and built with the conda C/C++ compilers. hts-sys forces
# bindgen, so the build needs libclang (provided via pixi: clang/clangdev).
rust-htslib = { version = "1.0", default-features = false, optional = true }
serde_json = "1"
svar2-codec = { path = "svar2-codec" }
thiserror = "2"

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.10"
# auto-initialize only takes effect for test/bench/example targets (dev-dependency
# feature unification), never for the cdylib the wheel ships; it lets
# `cargo test --no-default-features` call Python::attach without an embedding
# main() driving Py_Initialize itself.
pyo3 = { version = "0.29", features = ["auto-initialize"] }

[features]
# `conversion` pulls in rust-htslib and gates the VCF→svar2 write/convert
# pipeline. Off => query-only core (what gvl links as a path-dep).
default = ["conversion", "extension-module"]
conversion = ["dep:rust-htslib"]
extension-module = ["pyo3/extension-module"]
# abi3 (stable ABI) is opt-in ONLY at wheel-build time (`maturin build --features
# abi3`) so lint hooks (default features) and `cargo test --no-default-features`
# stay unaffected. abi3-py310 => one cpXY-abi3 wheel covers Python 3.10-3.13.
abi3 = ["pyo3/abi3-py310"]

[workspace]
members = ["svar2-codec"]

# Profiling build: release optimizations + debuginfo so perf/flamegraph symbolize
# the conversion hot path. Build with:
#   RUSTFLAGS="-C force-frame-pointers=yes" maturin develop --profile profiling
[profile.profiling]
inherits = "release"
debug = true
