[project]
name = "genoray"
version = "0.0.0"
description = "Add your description here"
authors = [{ name = "David Laub", email = "dlaub@ucsd.edu" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
dependencies = [
    "cyvcf2>=0.31.1",
    "hirola>=0.3.0",
    "numpy",
    "pgenlib>=0.92.0",
    "polars>=1.27.1",
    "pyranges==0.1.3",
    "typing-extensions>=4.13.2",
    "pandas",
    "pyarrow>=19.0.1",
    "setuptools>=78.1.0", # pyranges misses this dependency with uv for some reason
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest",
    "commitizen",
    "pre-commit",
    "ruff",
    "pytest-cases>=3.8.6",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
