[project]
name = "genoray"
version = "2.1.3"
description = "Add your description here"
authors = [{ name = "David Laub", email = "dlaub@ucsd.edu" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10,<3.14" # blocked by pyarrow
dependencies = [
    "seqpro>=0.8.0",
    "numpy>=1.26",
    "pandas>=2.2.3",
    "hirola>=0.3.0",
    "pgenlib>=0.91.0",
    "cyvcf2>=0.31.1",
    "polars>=1.37.1",
    "polars-bio>=0.20.1,<0.21",
    "pyranges>=0.1.3",
    "typing-extensions>=4.14",
    "pyarrow>=21",
    "tqdm>=4.65",
    "phantom-types>=3",
    "more-itertools>=10",
    "loguru>=0.7.0",
    "attrs",
    "awkward",
    "numba",
    "cyclopts",
    "zstandard",
    "pydantic",
    "oxbow>=0.5.1,<0.6",
    "joblib>=1.4.2,<2",
    "joblib-progress>=1.0.6,<2",
    "filelock>3,<4",
]

[project.optional-dependencies]
cli = ["genoray-cli>=0.2.0"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
annotated_tag = true

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:sorted_nearest.*"]

[tool.basedpyright]
enableTypeIgnoreComments = true
reportMissingTypeArgument = false

[tool.maturin]
python-source = "python"
module-name = "genoray._core"
bindings = "pyo3"
