[project]
name = "genoray"
version = "3.2.1"
description = "Add your description here"
authors = [{ name = "David Laub", email = "dlaub@ucsd.edu" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10,<3.14" # blocked by pyarrow
dependencies = [
    "seqpro>=0.21.1,<0.22",
    "numpy>=1.26",
    "pandas>=2.2.3",
    "hirola>=0.3.0",
    "pgenlib>=0.91.0",
    "cyvcf2>=0.31.1",
    "pysam>=0.22",
    "polars>=1.37.1",
    "polars-bio>=0.20.1,<0.34",
    "pyranges>=0.1.3",
    "typing-extensions>=4.14",
    "pyarrow>=21",
    "tqdm>=4.65",
    "phantom-types>=3",
    "more-itertools>=10",
    "loguru>=0.7.0",
    "attrs",
    "awkward",
    "numba",
    "cyclopts",
    "zstandard",
    "pydantic",
    "oxbow>=0.5.1,<0.6",
    "joblib>=1.4.2,<2",
    "joblib-progress>=1.0.6,<2",
    "filelock>3,<4",
    "scipy>=1.10",
    "pooch>=1.7",
]

[project.scripts]
genoray = "genoray._cli.__main__:app"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
annotated_tag = true

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so shared test helpers import as `from tests import _oracle`
# (tests/ has no __init__.py; main's suite relies on this).
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning:sorted_nearest.*"]
markers = [
    "network: requires network access (deselect with '-m not network')",
    "sigprofiler: requires SigProfilerMatrixGenerator (run in the 'sigprofiler' pixi env)",
]

[tool.basedpyright]
enableTypeIgnoreComments = true
reportMissingTypeArgument = false

[tool.ruff.lint]
# Add pydocstyle (`D`) to ruff's defaults (`E4`, `E7`, `E9`, `F`) to enforce
# Google-style docstrings. `D1xx` (missing-docstring) only fires on *public*
# names, so private helpers are exempt without extra config.
extend-select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Docstring rules target the library's public API; dev/test/doc code is exempt.
"tests/**" = ["D"]
"scripts/**" = ["D"]
"docs/**" = ["D"]
"notebooks/**" = ["D"]

[tool.maturin]
python-source = "python"
module-name = "genoray._core"
bindings = "pyo3"

[tool.pyrefly]
preset = "strict"
project-includes = ["python/genoray"]
# pgenlib and the _core Rust extension are compiled with no type stubs; treat
# them as untyped. `genoray._core` only matches when imported as a submodule
# (`import genoray._core`), not `from genoray import _core` (which resolves via
# the package __getattr__), so importers must use the submodule form.
replace-imports-with-any = ["pgenlib", "genoray._core"]

[tool.pyrefly.errors]
# Mostly numpy-scalar noise (np.integer -> np.integer[Any]) and the Phantom
# NDArray subclasses, which can't be cleanly parametrized. Keep the rest of strict.
implicit-any-type-argument = false
